--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   firebase_core: ^2.0.0
   bloc: ^8.1.0
   flutter_bloc: ^8.1.1
+  http: ^0.13.3
+  fl_chart: ^0.55.2
+  draw_graph: ^1.0.0
 
 dev_dependencies:
   flutter_test:
